--- a/home_automation/templates/index.html
+++ b/home_automation/templates/index.html
@@ -9,21 +9,40 @@
     {{ js_resources|indent(4)|safe }}
     {{ css_resources|indent(4)|safe }}
 
+    <!--For the Leafletjs Map-->
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
 
-    <meta http-equiv="refresh" content="600">
+    <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+
+      <!--The styles for the divs-->
+      <style>
+      #tempgraph {
+      bottom: 15vh;
+      left: 0.5vw;
+      width: 66vw;
+      height: 33vh;
+      z-index: 1;
+      position: absolute;
+      }
+
+      #map {
+      top: 0.5vh;
+      left: 0.5vw;
+      width: 60vw;
+      height: 50vh;
+      z-index: 1;
+      position: absolute;
+      }
+
+    </style>
   </head>
   <body style="background-color:#2b2b2b;">
 
+    <div id="map"></div>
 
-    <!--The temperature graph-->
-    <!--<div id="tempgraph">-->
-      <!--{{ plot_div|indent(4)|safe }}-->
-      <!--{{ plot_script|indent(4)|safe }}-->
-    <!--</div>-->
-
-    <div style="width: 20%; display: inline-block; position:absolute; left:10px; top:500px;">
-      {{ plot_div|indent(4)|safe }}
-      {{ plot_script|indent(4)|safe }}
+    <div id="tempgraph">
+      {{ div_temp|indent(4)|safe }}
+      {{ script_temp|indent(4)|safe }}
     </div>
 
 
@@ -45,9 +64,18 @@
     </div>
 
 
-    <!--The box-->
-    <div id="tempgraph">
-      This is a rectangle!
-    </div>
+    <script>
+
+        var map = L.map('map').setView([32.8089545, -96.7971913], 9);
+        mapLink =
+            '<a href="http://openstreetmap.org"></a>';
+        L.tileLayer(
+            'https://korona.geog.uni-heidelberg.de/tiles/roads/x={x}&y={y}&z={z}', {
+            attribution: 'Quadratic Insights',
+            maxZoom: 18,
+            }).addTo(map);
+
+
+    </script>
   </body>
 </html>
